corpus/cpp/template/case-15/snapshots/gcc13_14/single_sink_structured/render.default.txt
error: [template] class template argument deduction failed: @ src/main.cpp:17:22
raw : class template argument deduction failed:
| src/main.cpp:17:22
|     Pair other(1, "x");
|                      ^
while instantiating:

error: [template] no matching function for call to ‘Pair(int, const char [2])’ @ src/main.cpp:17:22
raw : no matching function for call to ‘Pair(int, const char [2])’
| src/main.cpp:17:22
|     Pair other(1, "x");
|                      ^
while instantiating:
  - src/main.cpp:11:5 candidate: ‘template<class T> Pair(T, T)-> Pair<T>’
  - src/main.cpp:17:22 deduced conflicting types for parameter ‘T’ (‘int’ and ‘const char*’)
  - src/main.cpp:10:8 candidate: ‘template<class T> Pair(Pair<T>)-> Pair<T>’
omitted 1 internal template frames

error: [template] no matching function for call to ‘expect_ptr(int&)’ @ src/main.cpp:6:5
raw : no matching function for call to ‘expect_ptr(int&)’
| src/main.cpp:6:5
|     expect_ptr(value);
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate: ‘template<class T> void expect_ptr(T*)’
omitted 1 internal template frames
details: --formed-explain | raw: --formed-raw